<resources>
    <string name="app_name">pia_moviles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="logo_app">logo-app</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_s">Apellido(s)</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="tel_fono">Teléfono</string>
    <string name="cargar_foto_de_perfil">CARGAR FOTO DE PERFIL</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="registrarse">Registrarse</string>

    <string-array name="categorias">
        <item>Playeras</item>
        <item>Camisas</item>
        <item>Vestidos</item>
        <item>Pantalones</item>
        <item>Sombreros</item>
    </string-array>
    <string-array name="busqueda">
        <item>Mas Recientes</item>
        <item>Mejor Calificados</item>
    </string-array>
    <string-array name="calif">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>