<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/formas"
    android:orientation="vertical"
    tools:context=".LoginFragment">


    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/logooutfinbxpress2"
        android:contentDescription="@string/logo_app"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"

       >


        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#000000" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_inicio"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:text="INICIAR SESION"
        app:backgroundTint="@color/black"
        app:cornerRadius="40dp"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="REGISTRARSE"
        android:textColor="#090909"
        app:backgroundTint="@color/white"
        app:cornerRadius="40dp"></com.google.android.material.button.MaterialButton>

</LinearLayout>